fix page content on custom layout to align left

--- a/assets/css/pulsair.css
+++ b/assets/css/pulsair.css
@@ -20,6 +20,11 @@ version 3.0 (http://www.gnu.org/licenses/gpl-3.0.html)
 \*------------------------------------*/
 /*------------------------------------*    $Sanitize Variables
 \*------------------------------------*/
+/*------------------------------------*    $LISTS
+\*------------------------------------*/
+ul, ol {
+  margin: 0 0 20px 0; }
+
 /*------------------------------------*    $BUTTONS
 \*------------------------------------*/
 .btn-contact,
